Fixed time progression alignment

--- a/css/plyr.css
+++ b/css/plyr.css
@@ -250,14 +250,12 @@ a.plyr__control::before {
 .plyr__controls .plyr__controls__item.plyr__time {
     padding: 0 calc(10px/2);
     padding: 0 calc(var(--plyr-control-spacing, 10px)/2)
-    padding-bottom: 25px
 }
 
 .plyr__controls .plyr__controls__item.plyr__progress__container:first-child,
 .plyr__controls .plyr__controls__item.plyr__time+.plyr__time,
 .plyr__controls .plyr__controls__item.plyr__time:first-child {
     padding-left: 0
-    padding-bottom: 25px
 }
 
 .plyr__controls:empty {
@@ -708,20 +706,17 @@ a.plyr__control::before {
 .plyr__time {
     font-size: 13px;
     font-size: var(--plyr-font-size-time, var(--plyr-font-size-small, 13px))
-    padding-bottom: 25px
 }
 
 .plyr__time+.plyr__time::before {
     content: '\2044';
     margin-right: 10px;
     margin-right: var(--plyr-control-spacing, 10px)
-    padding-bottom: 25px
 }
 
 @media(max-width:calc(768px - 1)) {
     .plyr__time+.plyr__time {
         display: none
-        padding-bottom: 25px
     }
 }
 
